--- a/index.html
+++ b/index.html
@@ -1,26 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Responsive CSS</title>
     <link rel="stylesheet" href="./style.css" type="text/css" media="all">
-  </head>
-  <body>
-      <div class="MainContainer">
-          <nav>
-              This is the Nav Bar
-          </nav>
-          <div class="Content">
-              <div class="Left">
-                  Left
-              </div>
-              <div class="Center">
-                  Center
-              </div>
-              <div class="Right">
-                  Right
-              </div>
-          </div>
-      </div>
-  </body>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
+</head>
+
+<body>
+    <div class="MainContainer">
+        <nav>
+            This is the Nav Bar
+        </nav>
+        <div class="Content">
+            <div class="Left">
+                
+                <div class="imgBlock" id="post1">
+                    <img class="smallPic" src="https://placebear.com/cache/150-145.jpg" />
+                    <p class="imgDescription">Small text here</p>
+                </div>
+                <div class="imgBlock" id="post1">
+                    <img class="smallPic" src="https://placebear.com/cache/150-145.jpg" />
+                    <p class="imgDescription">Small text here</p>
+                </div>
+                <div class="imgBlock" id="post1">
+                    <img class="smallPic" src="https://placebear.com/cache/150-145.jpg" />
+                    <p class="imgDescription">Small text here</p>
+                </div>
+                <div class="imgBlock" id="post1">
+                    <img class="smallPic" src="https://placebear.com/cache/150-145.jpg" />
+                    <p class="imgDescription">Small text here</p>
+                </div>
+            </div>
+            <div class="Center">
+                <div class="imgBlock" id="post1">
+                    <img class="bigPic" src="https://placebear.com/cache/150-145.jpg" />
+                    <p class="imgDescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                </div>
+                <div class="imgBlock" id="post2">
+                    <img class="bigPic" src="https://placebear.com/cache/395-205.jpg" />
+                    <p class="imgDescription">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                </div>
+            </div>
+            <div class="Right">
+                    <i id="flask" class="fas fa-flask fa-5x"></i>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
