--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 <body>
     <div class="MainContainer">
         <nav>
-            This is the Nav Bar
+                <div id="globeDiv">
+                <i id="globe" class="fas fa-globe-americas fa-3x"></i>
+                <span id="title">Welcome to the NavBar</span>             
+                </div>          
+     <div id="user">
+                         <i id="userImg" class="fas fa-user"></i>
+                        <p id="userSpan" >My Account</p>
+                </div>
+                
+
         </nav>
         <div class="Content">
             <div class="Left">
